<ernestoyaquello.com.verticalstepperform.VerticalStepperFormView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/stepper_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:soundEffectsEnabled="true"
    app:form_cancel_button_background_color="@color/colorPrimaryDark"
    app:form_cancel_button_pressed_background_color="@android:color/transparent"
    app:form_cancel_button_pressed_text_color="@color/colorPrimary"
    app:form_cancel_button_text="@string/cancel_button"
    app:form_circle_background_color="@color/colorPrimary"
    app:form_circle_text_color="@android:color/black"
    app:form_confirmation_step_subtitle_text="@string/sub_title_conf"
    app:form_display_bottom_navigation="true"
    app:form_display_cancel_button_in_last_step="true"
    app:form_display_different_background_color_on_disabled_elements="true"
    app:form_display_step_buttons="true"
    app:form_include_confirmation_step="true"
    app:form_last_button_text="@string/Enviar"
    app:form_next_button_background_color="@color/colorPrimary"
    app:form_next_button_pressed_background_color="@color/colorPrimaryDark"
    app:form_next_button_text="@string/ok_button"
    app:form_title_text_color="@android:color/black"
    app:form_vertical_line_width="1dp"
    app:layout_goneMarginLeft="@dimen/margin_left" />